<resources>
    <string name="app_name">Composition</string>

    <!-- Welcome screen -->
    <string name="description_welcome_logo">Welcome logo</string>
    <string name="title_number_composition">Number composition</string>
    <string name="description_rules">Rules of the game: there will be three figures in front of you,two below and one above, two of them will contain numbers. It is necessary that the sum of the numbers from the two lower figures is equal to the number in the upper figure, for this you need to insert the missing number. \n\nExample: the number 7 is in the upper circle, the question mark is in one of the lower ones, and the number 4 is in the other. So the number 3 should be in place of the question mark, because 3 + 4 = 7</string>
    <string name="button_understand">Understand</string>

    <!-- Choose level screen -->
    <string name="choose_level">Choose level:</string>
    <string name="level_test">Test</string>
    <string name="level_easy">Easy</string>
    <string name="level_normal">Normal</string>
    <string name="level_hard">Hard</string>

    <!-- Game screen -->
    <string name="question_mark">\?</string>
    <string name="answer_progress">The correct answers %s (minimum %s)</string>
    <string name="description_game_over">Game over</string>
    <string name="text_required_answers">The required number of correct answers: %s</string>
    <string name="text_score_answers">Your account: %s</string>
    <string name="text_required_percentage">Required percentage of correct answers: %s</string>
    <string name="text_score_percentage">Percent correct answers: %s</string>
    <string name="button_try_again">Try again</string>
</resources>