<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:contentDescription="@string/description_game_over"
            android:src="@drawable/ic_smile_good" />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_required_answers"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_score_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_score_answers"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_required_percentage"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_score_percentage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/text_score_percentage"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/button_try_again" />
    </LinearLayout>

</ScrollView>